createAction & reverse order tasks

--- a/app/db/tasks.json
+++ b/app/db/tasks.json
@@ -1,50 +1,1 @@
-[
-  {
-    "id": "5",
-    "create_time": null,
-    "completed_time": "2024-05-07T16:00:00Z",
-    "name": "Task 5 updated",
-    "username": "user5 updated too",
-    "status": "acabada"
-  },
-  {
-    "id": 7,
-    "create_time": "2024-05-07T16:00:00Z",
-    "completed_time": "2024-05-07T18:00:00Z",
-    "name": "Task 7",
-    "username": "user7",
-    "status": "acabada"
-  },
-  {
-    "id": 8,
-    "create_time": "2024-05-07T17:00:00Z",
-    "completed_time": "2024-05-07T19:30:00Z",
-    "name": "Task 8",
-    "username": "user8",
-    "status": "acabada"
-  },
-  {
-    "id": 9,
-    "create_time": "2024-05-07T18:00:00Z",
-    "completed_time": "2024-05-07T20:00:00Z",
-    "name": "Task 9",
-    "username": "user9",
-    "status": "acabada"
-  },
-  {
-    "id": 10,
-    "create_time": "2024-05-07T19:00:00Z",
-    "completed_time": "2024-05-07T21:30:00Z",
-    "name": "Task 10",
-    "username": "user10",
-    "status": "acabada"
-  },
-  {
-    "id": 11,
-    "name": "Sacar a Concha",
-    "username": "Iván",
-    "create_time": "2024-05-10 09:38:24",
-    "completed_time": null,
-    "status": "pendiente"
-  }
-]
+[{"id":"5","create_time":null,"completed_time":"2024-05-07T16:00:00Z","name":"Task 5 updated","username":"user5 updated too","status":"acabada"},{"id":7,"create_time":"2024-05-07T16:00:00Z","completed_time":"2024-05-07T18:00:00Z","name":"Task 7","username":"user7","status":"acabada"},{"id":8,"create_time":"2024-05-07T17:00:00Z","completed_time":"2024-05-07T19:30:00Z","name":"Task 8","username":"user8","status":"acabada"},{"id":9,"create_time":"2024-05-07T18:00:00Z","completed_time":"2024-05-07T20:00:00Z","name":"Task 9","username":"user9","status":"acabada"},{"id":10,"create_time":"2024-05-07T19:00:00Z","completed_time":"2024-05-07T21:30:00Z","name":"Task 10","username":"user10","status":"acabada"},{"id":11,"name":"Sacar a Concha","username":"Iv\u00e1n","create_time":"2024-05-10 09:38:24","completed_time":null,"status":"pendiente"},{"id":7,"name":"Amar a Concha","username":"Iv\u00e1n","create_time":"2024-05-15 11:10:45","completed_time":null,"status":"pendent"},{"id":8,"name":"Comprar r\u00facula para Concha","username":"Iv\u00e1n","create_time":"2024-05-15 11:12:27","completed_time":null,"status":"pendent"}]
